--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+body {
+    padding: 0;
+    margin: 0;
+}
+
 .control {
     width: 500px;
     margin: 0 auto;
@@ -53,8 +58,9 @@
 
 .header-site {
     justify-content: flex-end;
-    margin: 10px 40px 10px;
     display: flex;
+    position: fixed;
+    background-color: #2196f3;
 }
 
 table {
@@ -72,16 +78,30 @@ td {
 .cart {
     display: none;
     width: 80%;
-    margin: 0 auto;
+    margin: 0px auto;
     background-color: rgb(165, 165, 165);
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding-top: 180px;
+}
+
+.shop {
+    display: flex;
+    width: 80%;
+    margin: 0px auto;
+    padding-top: 180px;
+    background-color: rgb(122, 116, 116);
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
 .cart-product {
+    border: 1px solid black;
     display: flex;
     flex-direction: column;
-    width: 230px;
+    width: 35%;
+    margin: 5px;
+    padding: 5px;
 }
 
 .car-title {
@@ -104,4 +124,62 @@ td {
 
 .car-count {
     padding: 10px 0;
+}
+
+.cart-open {
+    display: flex;
+}
+
+header {
+    display: flex;
+    justify-content: flex-end;
+    padding: 50px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.cart-icon {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+#capa_1 {
+    position: absolute;
+}
+
+.count-product {
+    display: none;
+    position: absolute;
+    left: 21px;
+    top: -2px;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(199, 0, 0);
+    border-radius: 50%;
+    text-align: center;
+    font-size: 17px;
+    user-select: none;
+}
+
+.car-sumer {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.car-price {
+    display: flex;
+    flex-direction: column;
+}
+
+.add-cart {
+    border: 1px solid #2196f3;
+    width: fit-content;
+    padding: 5px 10px;
+    background-color: #03a9f4;
+    border-radius: 14px;
+    cursor: pointer;
+    margin: 10px auto;
 }
